--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <input type="reset" value="Reset">
                 </div>
                 </form>
-            </td>
-                <table class="list" id="storeList">
+                <td>
+                    <table class="list" id="storeList">
                     <thead>
                         <tr>
                         <th>
@@ -58,8 +58,14 @@
                         </th>
                         </tr>
                     </thead>
-                </table>
+                    <tbody>                       
+                    </tbody>
+                    </table>
+                </td>
+            </td>
         </tr>
     </table>
+    <script type="text/javascript" src="script.js">
+    </script>
 </body>
 </html>
