--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 
 <body>
     <header class="w-100 d-flex align-items-center justify-content-center flex-wrap" >
+        <div class="container">
         <h1 class="fs-5 px-3 pt-3">Proyecto nr2 : Desarrollo de Software CRUD
-        </h1>
+        </h1></div>
     </header>
     <table>
         <tr>
             <td>
                 <form autorcomplete="off" onsubmit="onFormSubmit()">
-                    <div class="w-100 d-flex align-items-center justify-content-center flex-wrap">
+                    <div>
                         <label for="productCode">
                             Producto
                         </label>
