--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-    <header class="w-100 d-flex align-items-center justify-content-center flex-wrap" >
-        <h1 class="fs-5 px-3 pt-3">Proyecto nr2 : Desarrollo de Software CRUD
-        </h1>
-    </header>
+    <header class="container-fluid bg-primary d-flex justify-content-center">
+        <p class="text-light mb-0 p-2 fs-6">Proyecto nr2 : Desarrollo de Software CRUD</p>
+      </header>
     <table>
         <tr>
             <td>
